@@ -1,7 +1,9 @@
 package com.srs.java.jvm.stack;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
+import java.util.UUID;
 
 /**
  * @author shaorensheng
@@ -9,30 +11,35 @@ import java.util.List;
  */
 public class Stack {
 
-    public void add() {
-        //int i = 10;
-        //int a = i++;
-        ////System.out.println(a);
-        //int b = ++i;
-        //System.out.println(b);
-        //List list = new ArrayList();
-        //for (int j = 0; j < 1000; j++) {
-        //    list.add(j);
-        //}
-        //System.gc();
+    static String base = "string";
+
+
+    /**
+     * -Xms50m
+     * -Xmx50m
+     * -XX:+PrintGCDetails
+     * -XX:+HeapDumpOnOutOfMemoryError
+     * -XX:HeapDumpPath=/Users/shaorenshengkoolearn-inc.com/Desktop/oom1.log
+     *
+     * -Xms50m -Xmx50m -XX:+PrintGCDetails -XX:+PrintGCDataStamps -Xloggc:/Users/shaorenshengkoolearn-inc.com/Desktop/oom1.log
+     * @param args
+     */
+    public static void main(String[] args){
+        //List<String> list = new ArrayList<>();
         //try {
-        //    Thread.sleep(100000000L);
+        //    Thread.sleep(100000L);
         //} catch (InterruptedException e) {
         //    e.printStackTrace();
         //}
-        //System.out.println(Runtime.getRuntime().maxMemory()/1024/1024 +"MB");
-        System.out.println(Runtime.getRuntime().totalMemory()/1024/1024 +"MB");
-        //int[] data = new int[1 * 1024 * 1024];
-    }
-
-    public static void main(String[] args) throws InterruptedException {
-        Stack stack = new Stack();
-        stack.add();
+        //for (int i = 0; i < Integer.MAX_VALUE; i++) {
+        //     String str = base + base;
+        //     base = str;
+        //     list.add(str.intern());
+        //}
+        List<String> list = new ArrayList<>();
+        while (true) {
+            list.add(UUID.randomUUID().toString());
+        }
     }
 
 }
